--- a/index.html
+++ b/index.html
@@ -13,56 +13,78 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="site-header">
-      <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+<div class="container">
+    <header>
+      <h1 role="heading">Jam Box Studios</h1>
+        <div class="skip-links">
+          <ul class="skip">
+            <li><a href="#welcome">Welcome to Jam Box</a></li>
+            <li><a href="#owner">Meet the owner</a></li>
+           <li><a href="#adress">Address</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+          </ul>
+        </div>
+      <nav itemscope itemtype="https://schema.org/SiteNavigationElement">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Reservation</a></li>
           <li><a href="#">Studio</a></li>
         </ul>
-      </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
-    </div>
-    <div class="main-content">
-      <h1>Welcome to Jam Box</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
-      <div class="owner">
-        <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
-        </ul>
-        <h1>Address</h1>
-        <p>
+      </nav>
+      <img role="banner" src="https://placekitten.com/1200/900" class="banner">
+    </header>
+
+    <main role="main">
+
+        <div role="contentinfo" id="welcome">
+          <h2>Welcome to Jam Box</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
+        </div>
+
+        <div id="owner">
+          <h2>Meet the owner</h2>
+          <ul itemscope itemtype="https://schema.org/Person">
+            <li itemprop="name">Name: John Doe</li>
+            <li itemprop="jobTitle">Title: CEO</li>
+            <li itemprop="email">Email: johnjoe@jambox.ca</li>
+           <li itemprop="phone">Phone: 613-000-0000</li>
+          </ul>
+        </div>
+
+        <div id="adress" itemscope itemtype="https://schema.org/PostalAddress">
+          <h2>Address</h2>
+          <p>
           Jambox Studios
           123 Guitar Road,
           Musicville, Danceistan
           B3T 0L0
-        </p>
-      </div>
-      <div class="contact-section">
-        <h1>Contact Us</h1>
-        <form action="thanks.html">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Subject">
-          <b>Your Message</b>
-          <textarea></textarea>
-          <button type="submit">Send</button>
-        </form>
-      </div>
-    </div>
-    <div class="site-footer">
+          </p>
+        </div>
+
+        <div id="contact" class="contact-section">
+          <h2>Contact Us</h2>
+          <form action="thanks.html">
+            <label for="fullname">Full Name</label>
+            <input type="text" id="fullname" name="fullname" placeholder="Full Name">
+            <label for="youremail">Email </label>
+            <input type="email" id="youremail" name="youremail" placeholder="Email">
+            <label for="fullname">Subject</label>
+            <input type="text" placeholder="Subject">
+            <label for="fullname">Your Message</label>
+            <textarea></textarea>
+            <button type="submit">SEND</button>
+          </form>
+        </div>
+    </main>
+
+    <footer>
       &copy; 2021 Jam Box Studios
-    </div>
-  </div>
+      <br>
+      <a class="back" href="#top">Back to Top</a>
+    </footer>
+</div>
 </body>
 
 </html>
